1.27 2018-11-17
  - only Zero(Polld) if not NULL (reported by @andk, thanks!)

1.26 2015-06-13
  - fix doc typos (Lucas Kanashiro)

1.25 2015-06-06
  - Fix Event::PRIO_NORMAL call in Watcher.pm (Lucas Kanashiro)
  - update Changes

1.24 2015-02-27
  - Don't distribute MANIFEST.SKIP
  - Update docs & code to require perl 5.008
  - Define MIN_PERL_VERSION to pass Kwalitee checks in Makefile.PL
    (Doran L. Barton)
  - Added =encoding utf8 to pass Test::Pod/Kwalitee tests. Added t/pod.t
    (Doran L. Barton)

1.23 2014-07-09
  - Add git repo
  - Rely on Inline "with" hook error message
  - use "our" not "use vars"

1.22 2014-06-30
  - Use updated Inline "with" hook API

1.21 2012-12-14
  - http://www.xray.mpe.mpg.de/mailing-lists/perl5-porters/2012-12/msg00424.html
    (C warnings avoidance)

1.20 2011-07-27
  - Repair test again

1.19 2011-07-24
  - Really skip the bad fd test on platforms that don't support it
    Considering how much trouble this test has caused, I question whether
    it is worth keeping it.

1.18 2011-06-25
  - Repair test to use a truly read-only variable
    Fix suggested by Father Chrysostomos <sprout@cpan.org>

1.17 2011-05-18
  - Skip bogus fd test for GNU Hurd
    A test report from Nigel Horne suggested that GNU Hurd either does not
    support detection of bogus fds or supports it differently than Linux.
    I do not have Hurd available for testing so I will simply skip the test.
  - On windows, skip tests correctly
    APOCAL@cpan.org wrote:
    The module failed to pass the tests because it emitted incorrect TAP
    plan. After consulting with some people on IRC and looking at the TAP
    manual, I found the solution. It seems you were using the "old-style"
    TAP printouts and with the latest Test::Harness, it complains!
    The fix is to change those 4 tests: hup, io, reenter, and signal. You
    need to print one line for the skip, not two! The TAP doc can be found