@@ -206,7 +206,6 @@ _load_watcher($_) for qw(idle io signal timer var);
 # use Inline with => 'Event';
 sub Inline {
     my ($class, $language) = @_;
-    return if $language ne 'C'; # Inline gives good error message
     require Event::MakeMaker;
     my $path = $Event::MakeMaker::installsitearch;
     require Config;
