@@ -1,3 +1,5 @@
+- remove C-only restriction on ->Inline method - thanks @oodler577
+
 1.27 2018-11-17
   - only Zero(Polld) if not NULL (reported by @andk, thanks!)
 
